...
    <Surface
      elevation={2}
      style={[styles.container, { backgroundColor: theme.colors.surface }]}
    >
      <View style={styles.content}>
        {renderItem(
          "Home",
          "home-outline",
          "home",
          isGroupsActive,
          onGroupsPress
        )}
        {renderItem(
...
